fixes: 6 review fixes(class popup__error_visible)

--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -6,6 +6,7 @@
   width: 358px;
   position: fixed;
   margin: 32px 0 0 36px;
+  display: none;
 }
 
 .popup__error:nth-of-type(2n) {
